--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "authors": [
     {
       "name": "Andrew Rajcany",
-      "email": "Andrew.Rajcany@aus.fujixerox.com"
+      "email": "andrew.rajcany.zj@fujifilm.com"
     }
   ],
   "type": "library",
